# hackathon_23

./: CMakeLists.txt  package.xml
launch/: hackathon.launch
nodes/: controller.py
scripts/: command_client.py  command_server.py
srv/: get_command.srv
